Improve API: - Add archived checks for POST/PUT/DELETE. - Rework exceptions and status codes. - Fix template creation.